# adventofcode

./: 01.hs  02-i-was-told-there-would-be-no-math.hs  03.hs  05.hs  06-fast.hs  06.hs  07-rewrite.hs  07.hs
04/: aoc-day4.cabal
04/app/: Main.hs
