name:                aoc-day4
version:             0.1.0.0
license:             MIT
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable aoc-day4-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , pureMD5
                     , bytestring
  default-language:    Haskell2010
